portainer/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: portainer
  namespace: portainer
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: portainer
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 9000
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.1.15/32
      ports:
        - port: 2375
    - to:
        - ipBlock:
            cidr: 192.168.1.16/32
      ports:
        - port: 2375
    - to:
        - ipBlock:
            cidr: 192.168.1.3/32
      ports:
        - port: 2375
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 80
        - port: 443
        - port: 9001
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
